# SlicerMouseMaster

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  ROADMAP.md  pyproject.toml
.claude/agents/: ci-analyzer.md  code-reviewer.md  test-runner.md  ui-improver.md
.claude/hooks/: README.md
.claude/skills/: README.md
.claude/skills/add-mouse-profile/: SKILL.md
.claude/skills/analyze-test-results/: SKILL.md
.claude/skills/audit-code-quality/: SKILL.md
.claude/skills/autonomous-code-review/: SKILL.md
.claude/skills/build-docs/: SKILL.md
.claude/skills/detect-buttons/: SKILL.md
.claude/skills/download-ci-artifacts/: SKILL.md
.claude/skills/export-preset/: SKILL.md
.claude/skills/extension-submission-checklist/: SKILL.md
.claude/skills/fix-bad-practices/: SKILL.md
.claude/skills/generate-screenshots/: SKILL.md
.claude/skills/prepare-extension-metadata/: SKILL.md
.claude/skills/review-ui-screenshots/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/submit-to-extension-index/: SKILL.md
.claude/skills/test-bindings/: SKILL.md
.claude/skills/validate-extension-submission/: SKILL.md
.github/workflows/: docs.yml  tests.yml
MouseMaster/: CMakeLists.txt  MouseMaster.py
MouseMaster/MouseMasterLib/: __init__.py  action_registry.py  button_detector.py  event_handler.py  mouse_profile.py  platform_adapter.py  preset_manager.py
MouseMaster/Resources/MouseDefinitions/: generic_3_button.json  generic_5_button.json  logitech_mx_master_3s.json  logitech_mx_master_4.json
MouseMaster/Resources/UI/: MouseMaster.ui
MouseMaster/Testing/Python/: conftest.py  run_slicer_tests.py  screenshot_capture.py  test_action_registry.py  test_button_detector.py  test_event_handler.py  test_generate_actions_reference.py  test_generate_mouse_profiles.py  test_mouse_master_widget.py  test_mouse_profile.py  test_platform_adapter.py  test_preset_manager.py  test_tutorial_workflow.py  test_widget_interactions.py
MouseMaster/Testing/Python/test_fixtures/: invalid_preset.json  valid_preset.json
Screenshots/: README.md  manifest.json
docs/: FAQ.md  TESTING.md  conf.py  contributing-presets.md  index.rst  platform-matrix.md
docs/adr/: ADR-001-event-interception.md  ADR-002-preset-file-format.md  ADR-003-button-detection.md  ADR-004-platform-differences.md  ADR-005-persistence.md  ADR-006-ui-framework.md  ADR-007-preset-sharing.md  ADR-008-testing.md  ADR-009-action-mapping.md  ADR-010-context-bindings.md  ADR-011-documentation-infrastructure.md  ADR-012-living-documentation.md  README.md  index.rst
docs/developer-guide/: adding-actions.rst  adding-mice.rst  architecture.rst  contributing.rst  index.rst  testing.rst
docs/reference/: actions.rst  events.rst  index.rst  mouse-profiles.rst  presets.rst  slicer-api.rst
docs/user-guide/: button-mapping.rst  context-bindings.rst  index.rst  installation.rst  presets.rst  quick-start.rst  troubleshooting.rst
presets/builtin/: default_generic_3_button.json  default_generic_5_button.json  default_mx_master_3s.json  default_mx_master_4.json  segmentation_workflow.json
scripts/: capture_screenshots.py  run_in_slicer.sh  validate_extension.sh
